@@ -2,7 +2,7 @@ Source: plywood
 Section: text
 Priority: optional
 Maintainer: Monty Taylor <mordred@inaugust.com>
-Build-Depends-Indep: debhelper (>> 3.0.0), python2.2-dev (>>2.2.0), cvs2cl
+Build-Depends-Indep: debhelper (>> 3.0.0), python2.2-dev (>>2.2.0)
 Standards-Version: 3.5.2
 
 Package: plywood
